# 0.00.16 (58042) Oct 26, 2011
10/26/11 Deploying to dev for feedback and review.
Fixed an issue where the center of gravity could be off for some of the masses used on the game tab.
Made sure all masses fit between the two tick marks to the right and left of their position on the balance.
Added a constraint to the multi-mass challenges so that the fixed masses are at least two "ticks" apart.  This prevents issues with overlapping.
Added a key handler on the game tab so that the user can move between steps of the challenges using the Enter key.
Added a small trash can mass object, which is being used in the first tab so as not to give away mass of medium trash can, which is being used as a mystery mass in the game.
Changed show label from "Ruler" to "Rulers", since the ruler was split into two a while back.
# 0.00.15 (57885) Oct 21, 2011
10/21/11 Deploying to dev for review and feedback.
Added a number of new masses and adjusted the mass values to maximize the number of potential challenges.
Made the challenges in the game be unique, meaning that the user shouldn't see the same challenge until having played the game several times.
Moved attachment bar in front of plank on first and second tabs so that it is consistent across all tabs.
Changed label in "Show" control panel from "Distances" to "Rulers".
Removed the "F" label from the fire extinguisher.
Fixed a problem with the calculation used for determining whether a mass was above the plank.
Implemented a workaround for an issue where bricks would leave trails behind them when dragged on an enlarged play area.
# 0.00.14 (57181) Oct 3, 2011
10/3/11 Publishing to dev for interviews.
Made the ruler look like two separate rulers joined in the center.
Removed bricks from first tab and added more "interesting" objects.
# 0.00.13 (57110) Sep 30, 2011
9/30/11 Deploying to dev for interviews and feedback from design team.